--- a/22mongojquery/public/index.html
+++ b/22mongojquery/public/index.html
@@ -340,7 +340,6 @@
         <input placeholder="End date" type="text" onfocus="(this.type='date')" id="dateFilter2" name="dateFilter2">
       </div>
     </div>
-
     <div class="containercheck">
       <input type="checkbox" id="booleancheck" name="booleancheck" value="booleancheck">
       <label for="booleancheck" style="width: 150px;">Boolean</label>
@@ -353,7 +352,7 @@
     </div>
     <button type="submit" class="btn btn-primary" id="search">Search</button>
     <a class="btn btn-secondary" id="resetFilter">Reset</a>
-
+</form>
     <br><br>
     <table class="table table-hover">
       <thead>
