--- a/cms/public/index.html
+++ b/cms/public/index.html
@@ -10,6 +10,7 @@
     <%= htmlWebpackPlugin.options.title %>
   </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 
 <body>
