--- a/cms/public/index.html
+++ b/cms/public/index.html
@@ -11,6 +11,7 @@
   </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7KczFXBMqdiitBBHmp1YD1l0JYjzCv64"></script>
 </head>
 
 <body>
